[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0",
    "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "adaptive-pipeline"
version = "0.1.0"
description = "An adaptive Pipeline Cache composed of FIFO and upgraded TinyLFU with cost-awareness"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Nadav Keren", email = "nadavker@pm.me"}
]
keywords = ["cache", "pipeline", "performance", "cpp", "lru", "lfu", "fifo", "adaptive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Caching",
    "Typing :: Typed",
]
dependencies = [
    "pybind11>=2.6.0"
]

[project.urls]
Homepage = "https://github.com/NadavKeren/python-adaptive-pipeline-cache"
Repository = "https://github.com/NadavKeren/python-adaptive-pipeline-cache"
Issues = "https://github.com/NadavKeren/python-adaptive-pipeline-cache/issues"

